search text low contrast fixed

--- a/style.css
+++ b/style.css
@@ -133,3 +133,7 @@ i.toggler {
   margin-right: 0px !important;
   margin-left: 0px !important;
 }
+
+.dark-mode #search p{
+  color: white;
+}
